本次提交变化： 1.Handle OXPLLDP packet. 2.Working on SBP translation.
下次准备：

 1.Compelete SBP translation.
 2.Compute intra_link and sync link info to super.
 3.Test SBP parse on Ryu.
 4.Test inter-domain communication.
 5.Test inter-link discovery.
 6.Test vport discovery.
 7.Test host locarion discovery.
 8.Find TODO and complete it.
 9.Fix bugs.

--- a/apps/oxp/ctl/pom.xml
+++ b/apps/oxp/ctl/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>onos-oxp-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.onosproject</groupId>
+            <artifactId>openflowj</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
