--- a/apps/oxp/api/pom.xml
+++ b/apps/oxp/api/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>onos-oxp-protocol</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.onosproject</groupId>
+            <artifactId>openflowj</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
