--- a/apps/oxp/ctl/pom.xml
+++ b/apps/oxp/ctl/pom.xml
@@ -27,6 +27,10 @@
             <groupId>org.onosproject</groupId>
             <artifactId>openflowj</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.onosproject</groupId>
+            <artifactId>onos-core-common</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
