--- a/apps/oxp/rest/pom.xml
+++ b/apps/oxp/rest/pom.xml
@@ -13,7 +13,7 @@
     <packaging>bundle</packaging>
 
     <properties>
-        <web.context>/onos/oxp</web.context>
+        <web.context>/onos</web.context>
         <api.version>1.0.0</api.version>
         <api.title>Open eXchange Protocol REST API</api.title>
         <api.description>
@@ -29,11 +29,20 @@
             <artifactId>jersey-container-servlet-core</artifactId>
             <!--<version>2.22.2</version>-->
         </dependency>
-        <dependency>
-            <groupId>org.onosproject</groupId>
-            <artifactId>onos-incubator-api</artifactId>
-            <version>1.7.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.ws.rs</groupId>-->
+            <!--<artifactId>javax.ws.rs-api</artifactId>-->
+            <!--<version>2.0.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.glassfish.jersey.containers</groupId>-->
+            <!--<artifactId>jersey-container-servlet</artifactId>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.onosproject</groupId>-->
+            <!--<artifactId>onos-incubator-api</artifactId>-->
+            <!--<version>1.7.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
