--- a/apps/oxp/rest/src/main/webapp/WEB-INF/web.xml
+++ b/apps/oxp/rest/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="ONOS" version="2.5">
-    <display-name>BigMao Radio Station REST API v1.0</display-name>
+    <display-name>Open eXchange Protocol REST API v1.0</display-name>
 
     <security-constraint>
         <web-resource-collection>
@@ -45,7 +45,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>org.fnl.rest.MaoRestApplication</param-value>
+            <param-value>org.onosproject.oxp.rest.OxpRestApplication</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
