--- a/apps/oxp/ctl/pom.xml
+++ b/apps/oxp/ctl/pom.xml
@@ -31,7 +31,12 @@
             <groupId>org.onosproject</groupId>
             <artifactId>onos-core-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
