--- a/apps/fnl.test/pom.xml
+++ b/apps/fnl.test/pom.xml
@@ -25,7 +25,6 @@
         <dependency>
             <groupId>org.onosproject</groupId>
             <artifactId>onos-incubator-api</artifactId>
-            <version>1.7.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -39,7 +38,7 @@
         <api.package>org.fnl.rest</api.package>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <onos.version>1.7.0-SNAPSHOT</onos.version>
+        <onos.version>1.6.0</onos.version>
         <onos.app.name>org.onosproject.fnl.test</onos.app.name>
         <onos.app.title>Foo App</onos.app.title>
         <onos.app.origin>Foo, Inc.</onos.app.origin>
@@ -77,12 +76,12 @@
     <parent>
         <groupId>org.onosproject</groupId>
         <artifactId>onos-apps</artifactId>
-        <version>1.7.0-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
 
     <groupId>org.fnl</groupId>
     <artifactId>onos-app-fnl-test</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     <packaging>bundle</packaging>
 
     <description>ONOS OSGi bundle archetype</description>
