Self-design Routing Algorithm, Divided into Four Step, 1~3 is OK but not test.

--- a/apps/fnl.test/pom.xml
+++ b/apps/fnl.test/pom.xml
@@ -26,6 +26,11 @@
             <groupId>org.onosproject</groupId>
             <artifactId>onos-incubator-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.onosproject</groupId>
+            <artifactId>onos-core-common</artifactId>
+            <version>1.6.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
