Add CLI module and diff subnet simple topo.

--- a/apps/oxp/app/pom.xml
+++ b/apps/oxp/app/pom.xml
@@ -35,7 +35,11 @@
             <artifactId>onos-oxp-rest</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.onosproject</groupId>
+            <artifactId>onos-oxp-cli</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
